feat: implement journal entry functionality with dynamic UI and tagging system

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ build/
 .gradle/
 .idea/
 .kotlin/
+captures/
+.externalNativeBuild/
+.cxx/
 
-*.jks
-*.keystore
+*.iml
 .DS_Store
 local.properties
